--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "my-app-boilerplate",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,7 +11,29 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.16"
+    "next": "14.2.16",
+    "use-debounce": "^10.0.4",
+    "@radix-ui/react-toast": "^1.2.2",
+    "@stripe/react-stripe-js": "^3.6.0",
+    "@stripe/stripe-js": "^7.2.0",
+    "bcryptjs": "^3.0.2",
+    "debounce": "^2.2.0",
+    "uuid": "^11.0.3",
+    "stripe": "^17.6.0",
+    "motion": "^12.15.0",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
+    "prettier-plugin-tailwindcss": "^0.6.9",
+    "prettier": "^3.3.3",
+    "next-auth": "^4.24.11",
+    "next-video": "^2.0.4",
+    "resend": "^4.1.2",
+    "mongoose": "^8.8.3",
+    "lucide-react": "^0.460.0",
+    "react-hot-toast": "^2.5.2",
+    "clsx": "^2.1.1",
+    "@aws-sdk/client-s3": "^3.712.0",
+    "@aws-sdk/s3-request-presigner": "^3.712.0"
   },
   "devDependencies": {
     "postcss": "^8",
