--- a/package.json
+++ b/package.json
@@ -9,36 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.16",
-    "use-debounce": "^10.0.4",
+    "@aws-sdk/client-s3": "^3.712.0",
+    "@aws-sdk/s3-request-presigner": "^3.712.0",
     "@radix-ui/react-toast": "^1.2.2",
     "@stripe/react-stripe-js": "^3.6.0",
     "@stripe/stripe-js": "^7.2.0",
     "bcryptjs": "^3.0.2",
+    "clsx": "^2.1.1",
+    "daisyui": "^4.12.24",
     "debounce": "^2.2.0",
-    "uuid": "^11.0.3",
-    "stripe": "^17.6.0",
+    "lucide-react": "^0.460.0",
+    "mongoose": "^8.8.3",
     "motion": "^12.15.0",
-    "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7",
-    "prettier-plugin-tailwindcss": "^0.6.9",
-    "prettier": "^3.3.3",
+    "next": "14.2.16",
     "next-auth": "^4.24.11",
     "next-video": "^2.0.4",
-    "resend": "^4.1.2",
-    "mongoose": "^8.8.3",
-    "lucide-react": "^0.460.0",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.9",
+    "react": "^18",
+    "react-dom": "^18",
     "react-hot-toast": "^2.5.2",
-    "clsx": "^2.1.1",
-    "@aws-sdk/client-s3": "^3.712.0",
-    "@aws-sdk/s3-request-presigner": "^3.712.0"
+    "resend": "^4.1.2",
+    "stripe": "^17.6.0",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.4",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.16"
+    "eslint-config-next": "14.2.16",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
