--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3001",
     "lint": "next lint"
   },
   "dependencies": {
@@ -17,7 +17,9 @@
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "daisyui": "^4.12.24",
+    "date-fns": "^4.1.0",
     "debounce": "^2.2.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.460.0",
     "mongoose": "^8.8.3",
     "motion": "^12.15.0",
