--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.712.0",
     "@aws-sdk/s3-request-presigner": "^3.712.0",
+    "@capacitor/android": "^7.4.3",
+    "@capacitor/core": "^7.4.3",
+    "@capacitor/ios": "^7.4.3",
     "@radix-ui/react-toast": "^1.2.2",
     "@stripe/react-stripe-js": "^3.6.0",
     "@stripe/stripe-js": "^7.2.0",
@@ -39,6 +42,7 @@
     "uuid": "^11.0.3"
   },
   "devDependencies": {
+    "@capacitor/cli": "^7.4.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
     "postcss": "^8",
